<resources>
    <string name="app_name">EasyPark</string>
    <string name="defaultMethod">DEFAULT</string>
    <string name="logo">Logo</string>
    <string name="email">Email</string>
    <string name="password">PASSWORD</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="log_in">LOG IN</string>
    <string name="new_user">New User?</string>
    <string name="sign_up">SIGN UP</string>
    <string name="retrieve_password">RETRIEVE PASSWORD</string>
    <string name="enter_cell_phone_number">Enter Registered Email</string>
    <string name="register">REGISTER</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="registerEmail">Email</string>
    <string name="registerPassword">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="switch_traffic_on">SWITCH TRAFFIC ON</string>
    <string name="booking">BOOKING</string>
    <string name="parking_lot_name">Parking Lot Name:</string>
    <string name="insert_parking_lot_name">Parking Lot Name</string>
    <string name="spot_number">Spot Number:</string>
    <string name="parking_cost">Parking Cost:</string>
    <string name="insert_spot_number">Spot Number</string>
    <string name="insert_cost_spinner">Cost Spinner</string>
    <string name="proceed_to_booking">Proceed to Booking</string>
    <string name="cancel">CANCEL</string>
    <string name="reservation">RESERVATION</string>
    <string name="book_parking_spot">BOOK PARKING SPOT</string>
    <string name="payment">PAYMENT</string>
    <string name="parking_duration">Parking Duration:</string>
    <string name="insert_parking_duration">Time in Hours</string>
    <string name="price">Price:</string>
    <string name="textview">TextView</string>
    <string name="parking_price_result">$20</string>
    <string name="credit_card_number_ending_in_0914">Credit Card Number Ending in 0914</string>
    <string name="pay_now">PAY NOW</string>
    <string name="successfulPayment">The Payment Was Successful</string>
    <string name="arrival">Time to Arrival:</string>
    <string name="minutes">00:15:00</string>
    <string name="arrived">I HAVE ARRIVED</string>
    <string name="backToMap">BACK TO THE MAP</string>
    <string name="profile">PROFILE</string>
    <string name="profile_picture">Profile picture</string>
    <string name="profile_first_name">First Name: </string>
    <string name="profile_first_name_result">First Name </string>
    <string name="profile_last_name">Last Name: </string>
    <string name="profile_last_name_result">Last Name</string>
    <string name="profile_email">Email: </string>
    <string name="profile_email_result">Email</string>
    <string name="edit_profile">EDIT PROFILE</string>
    <string name="parking_history">PARKING HISTORY</string>
    <string name="payment_info">PAYMENT INFO</string>
    <string name="save_profile">SAVE</string>
    <string name="parking_history_record">First Record</string>
    <string name="parking_history_illustration">Parking History</string>
    <string name="add_new_payment_method">ADD PAYMENT METHOD</string>
    <string name="payment_method">PAYMENT METHOD</string>
    <string name="name_on_card">Name on Card</string>
    <string name="credit">CREDIT</string>
    <string name="debit">DEBIT</string>
    <string name="card_number">Card Number</string>
    <string name="card_expiration_date">Card Expiration Date</string>
    <string name="payment_confirmation">PAYMENT CONFIRMATION</string>
    <string name="feedback">FEEDBACK</string>
    <string name="feedback_name">Name:</string>
    <string name="feedback_first_last_name">First Name + Last Name</string>
    <string name="submitFeedback">SUBMIT FEEDBACK</string>
    <string name="feedbackPrevious">Previous users feedback</string>
    <string name="previous_user_name">Name: </string>
    <string name="previous_user_name_field">Name</string>
    <string name="ratingLabel">Rating: </string>
    <string name="rating_field">rating</string>
    <string name="write_your_feedback_here">Write your feedback here</string>
    <string name="previousUserName">Name:</string>
    <string name="previous_feedback_name">Name</string>
    <string name="rating">Rating:</string>
    <string name="rating_result">rating</string>
    <string name="feedbackPreviousUser">Feedback:</string>
    <string name="the_feedback_goes_here">the feedback goes here</string>
    <string name="send_verification">SEND VERIFICATION</string>
    <string name="successful_selection">Successful Selection</string>
    <string name="logo_first">todo</string>
    <string name="reservation_time">Reservation Time:</string>
    <string name="reservation_time_result">Reservation Time</string>
    <string name="mm_yy">MM/YY</string>
    <string name="default_payment_method">Default payment method</string>
    <string name="psm_login">Log in as a Parking Space Manager</string>
    <string name="psm_login_btn">Log in as a PSM</string>
    <string name="psm_apply_btn">Apply for a license</string>
    <string name="create_parking_lot_title">Create New Parking Lot</string>
    <string name="create_parking_lot_btn">Create</string>
    <string name="create_parking_lot_map_btn">Use map</string>
    <string name="view_parking_lots_title">Your Parking Lots</string>
    <string name="view_parking_lots_btnCreate">Create New</string>
    <string name="view_parking_lots_btnEdit">Edit</string>
    <string name="view_parking_lots_btnDelete">Delete</string>
    <string name="edit_parking_lot_title">Edit Parking Lot</string>
    <string name="edit_parking_lot_btn">Update</string>
    <string name="apply_license_title">Apply for a PSM license</string>
    <string name="apply_license_explanation">Please enter the below details to make a priliminary application to become a Parking Space Manager (PSM).</string>
    <string name="apply_license_apply_btn">Apply</string>
    <string name="apply_license_thankyou">Thank you for your application.  We will contact you shortly about your background check.</string>
    <string name="back">Back</string>
    <string name="view_feedback_title">Your Feedback</string>
    <string name="psm_profile_button_plot">Edit Parking Lots</string>

    <string-array name="duration_array">
        <item>12hour - $20</item>
        <item>1hour - $4</item>
        <item>24hour - $30</item>
        <item>6hour - $12</item>
    </string-array>

</resources>