<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".psm.ApplyPsmLicenseActivity">

    <TextView
        android:id="@+id/applyLicenseTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:text="@string/apply_license_title"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/applyLicense_Explanation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:text="@string/apply_license_explanation"
        android:layout_below="@id/applyLicenseTitle"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/applyLicense_Name"
        android:maxLength="20"
        android:layout_marginTop="10dp"
        android:textColor="@color/dark_grey"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:gravity="center|left"
        android:padding="20dp"
        android:hint="Full Name"
        android:layout_below="@id/applyLicense_Explanation"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/applyLicense_Address"
        android:maxLength="20"
        android:textColor="@color/dark_grey"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:gravity="center|left"
        android:padding="20dp"
        android:hint="Business Address"
        android:layout_below="@id/applyLicense_Name"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/applyLicense_Email"
        android:maxLength="20"
        android:textColor="@color/dark_grey"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:gravity="center|left"
        android:padding="20dp"
        android:hint="Email"
        android:layout_below="@id/applyLicense_Address"
        />

    <Button
        android:layout_width="271dp"
        android:layout_height="75dp"
        android:id="@+id/applyLicense_ApplyBtn"
        android:layout_below="@id/applyLicense_Email"
        android:layout_centerInParent="true"
        android:layout_marginTop="12dp"
        android:textSize="20sp"
        app:backgroundTint="#009688"
        android:text="@string/apply_license_apply_btn"
        />

    <TextView
        android:id="@+id/applyLicense_ThankYou"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:text="@string/apply_license_thankyou"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_below="@id/applyLicense_ApplyBtn"/>

    <Button
        android:layout_width="271dp"
        android:layout_height="75dp"
        android:id="@+id/applyLicense_BackBtn"
        android:layout_below="@id/applyLicense_ThankYou"
        android:layout_centerInParent="true"
        android:layout_marginTop="12dp"
        android:textSize="20sp"
        app:backgroundTint="#009688"
        android:text="@string/back"
        />

</RelativeLayout>